--- a/vault-cluster/values.yaml
+++ b/vault-cluster/values.yaml
@@ -43,9 +43,9 @@ vault:
     extraEnvironmentVars:
       VAULT_CACERT: /vault/userconfig/ca/tls.crt
       AWS_REGION: us-east-1
-      AWS_ACCESS_KEY_ID: AKIARW3YFGQXKTS33UMU
-      AWS_SECRET_ACCESS_KEY: ul3nE0AOX3mRA4nmzNmASzQaidnj+4DqeGG4dyEH
-      VAULT_AWSKMS_SEAL_KEY_ID: 73765c4a-adc7-4d73-805f-0c228c151fcc
+      AWS_ACCESS_KEY_ID: <redacted>
+      AWS_SECRET_ACCESS_KEY: <redacted>
+      VAULT_AWSKMS_SEAL_KEY_ID: <redacted>
 
     # extraVolumes is a list of extra volumes to mount. These will be exposed
     # to Vault in the path `/vault/userconfig/<name>/`.
