--- a/vault-cluster/templates/volumes.yaml
+++ b/vault-cluster/templates/volumes.yaml
@@ -32,105 +32,105 @@ spec:
     requests:
       storage: 50Mi
   volumeName: app-secrets
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolume*/}}
-{{/*metadata:*/}}
-{{/*  name: vault-data-0*/}}
-{{/*spec:*/}}
-{{/*  capacity:*/}}
-{{/*    storage: 1Gi*/}}
-{{/*  volumeMode: Filesystem*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  mountOptions:*/}}
-{{/*    - hard*/}}
-{{/*    - nfsvers=4.1*/}}
-{{/*    - rsize=1048576*/}}
-{{/*    - wsize=1048576*/}}
-{{/*    - timeo=600*/}}
-{{/*    - retrans=2*/}}
-{{/*  nfs:*/}}
-{{/*    path: /*/}}
-{{/*    server: fs-087b6a2eabdbdce95.efs.us-east-1.amazonaws.com*/}}
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolumeClaim*/}}
-{{/*metadata:*/}}
-{{/*  name: data-vault-cluster-0*/}}
-{{/*spec:*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  storageClassName: ""*/}}
-{{/*  resources:*/}}
-{{/*    requests:*/}}
-{{/*      storage: 1Gi*/}}
-{{/*  volumeName: vault-data-0*/}}
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolume*/}}
-{{/*metadata:*/}}
-{{/*  name: vault-data-1*/}}
-{{/*spec:*/}}
-{{/*  capacity:*/}}
-{{/*    storage: 1Gi*/}}
-{{/*  volumeMode: Filesystem*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  mountOptions:*/}}
-{{/*    - hard*/}}
-{{/*    - nfsvers=4.1*/}}
-{{/*    - rsize=1048576*/}}
-{{/*    - wsize=1048576*/}}
-{{/*    - timeo=600*/}}
-{{/*    - retrans=2*/}}
-{{/*  nfs:*/}}
-{{/*    path: /*/}}
-{{/*    server: fs-04d2228cc995f9a1b.efs.us-east-1.amazonaws.com*/}}
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolumeClaim*/}}
-{{/*metadata:*/}}
-{{/*  name: data-vault-cluster-1*/}}
-{{/*spec:*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  storageClassName: ""*/}}
-{{/*  resources:*/}}
-{{/*    requests:*/}}
-{{/*      storage: 1Gi*/}}
-{{/*  volumeName: vault-data-1*/}}
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolume*/}}
-{{/*metadata:*/}}
-{{/*  name: vault-data-2*/}}
-{{/*spec:*/}}
-{{/*  capacity:*/}}
-{{/*    storage: 1Gi*/}}
-{{/*  volumeMode: Filesystem*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  mountOptions:*/}}
-{{/*    - hard*/}}
-{{/*    - nfsvers=4.1*/}}
-{{/*    - rsize=1048576*/}}
-{{/*    - wsize=1048576*/}}
-{{/*    - timeo=600*/}}
-{{/*    - retrans=2*/}}
-{{/*  nfs:*/}}
-{{/*    path: /*/}}
-{{/*    server: fs-09c3b185540ad521c.efs.us-east-1.amazonaws.com*/}}
-{{/*---*/}}
-{{/*apiVersion: v1*/}}
-{{/*kind: PersistentVolumeClaim*/}}
-{{/*metadata:*/}}
-{{/*  name: data-vault-cluster-2*/}}
-{{/*spec:*/}}
-{{/*  accessModes:*/}}
-{{/*    - ReadWriteOnce*/}}
-{{/*  storageClassName: ""*/}}
-{{/*  resources:*/}}
-{{/*    requests:*/}}
-{{/*      storage: 1Gi*/}}
-{{/*  volumeName: vault-data-2*/}}
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: vault-data-0
+spec:
+  capacity:
+    storage: 1Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  mountOptions:
+    - hard
+    - nfsvers=4.1
+    - rsize=1048576
+    - wsize=1048576
+    - timeo=600
+    - retrans=2
+  nfs:
+    path: /
+    server: fs-087b6a2eabdbdce95.efs.us-east-1.amazonaws.com
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-vault-cluster-0
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Gi
+  volumeName: vault-data-0
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: vault-data-1
+spec:
+  capacity:
+    storage: 1Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  mountOptions:
+    - hard
+    - nfsvers=4.1
+    - rsize=1048576
+    - wsize=1048576
+    - timeo=600
+    - retrans=2
+  nfs:
+    path: /
+    server: fs-04d2228cc995f9a1b.efs.us-east-1.amazonaws.com
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-vault-cluster-1
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Gi
+  volumeName: vault-data-1
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: vault-data-2
+spec:
+  capacity:
+    storage: 1Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  mountOptions:
+    - hard
+    - nfsvers=4.1
+    - rsize=1048576
+    - wsize=1048576
+    - timeo=600
+    - retrans=2
+  nfs:
+    path: /
+    server: fs-09c3b185540ad521c.efs.us-east-1.amazonaws.com
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-vault-cluster-2
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Gi
+  volumeName: vault-data-2
